Fixed side nav cross browser. Also labbing with resposive banner image instead of using backstretch

--- a/css/enhance.css
+++ b/css/enhance.css
@@ -79,6 +79,7 @@ Breakpoints
 
 	.footer-block {
 		display: inline-block;
+		height: auto;
 		border-right: 1px solid #4c4c4c;
 		border-bottom: 0;
 		padding: 0.5em 2.5em 0.5em 0;
